Debug complete tribe and townHall system and TownHall panel